# dsvf

./: CMakeLists.txt  Makefile  README.md  test.py
.github/workflows/: build.yml
lib/: _juce.cmake  cpm.cmake  doctest.cmake  numcpp.cmake
scripts/: build_macos.sh  build_ubuntu.sh  build_windows.bat  postbuild_macos.sh  postbuild_ubuntu.sh  postbuild_windows.bat
src/DigitalStateVariableFilter/: CMakeLists.txt  DSVF.cmake  Dot.h  Filter.h  Mixer.h
src/DigitalStateVariableFilterPlugin/: CMakeLists.txt  Chronometer.h  Editor.cpp  Effect.cpp  Effect.h  Filter.h  Parameters.cpp  Parameters.h  Plugin.cmake  Plugin.cpp  Processor.cpp  Processor.h
src/DigitalStateVariableFilterPlugin/Effect/: Clip.h  Dot.h  Filter.h  Mixer.h
src/DigitalStateVariableFilterPlugin/Parameters/: GenericParameterContainer.h  GenericParameterSubscription.h
src/DigitalStateVariableFilterPlugin/Utils/: Chronometer.h
src/DigitalStateVariableFilterPlugin/Utils/Parameters/: GenericParameterContainer.h  GenericParameterSubscription.h  XmlParameters.h
src/DigitalStateVariableFilterTest/: CMakeLists.txt  Test.cmake  Test.cpp  Test.h  TestClip.cpp  TestDot.cpp  TestFilter.cpp  TestMixer.cpp
